Picture gallery works!

--- a/hexes.css
+++ b/hexes.css
@@ -35,7 +35,7 @@
 }
 
 .hex-2 {
-    background-color: #eee;
+    background-color: #cc7777;
     background-position: 50%;
     background-size: auto 100%;
     background-repeat: no-repeat;
