--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
 
@@ -18,7 +19,6 @@ h1 {
     background-color: rgba(30, 30, 30, 0.5);
 
     color: white;
-    font-family: 'Open Sans', sans-serif;
     height: 500px;
 }
 
@@ -37,12 +37,7 @@ h1 {
     font-size: 46pt;
     text-align: center;
     letter-spacing: -2pt;
-    /* Parallax */
-    position: fixed;
-    top: 200px;
-    left: 5%;
-    right: 5%;
-    will-change: transform;
+    padding-top: 200px;
 }
 
 .header h3 {
@@ -51,12 +46,6 @@ h1 {
     -webkit-text-stroke: 0.30px;
     text-align: center;
     margin: 0;
-    /* Parallax */
-    position: fixed;
-    top: 270px;
-    left: 5%;
-    right: 5%;
-    will-change: transform;
 }
 
 #main-navbar {
@@ -82,6 +71,10 @@ h1 {
 #main-navbar span.separator {
     -webkit-flex: 1;
     flex: 1;
+}
+
+#main-navbar li {
+    cursor: pointer;
 }
 
 .header ul {
@@ -160,6 +153,7 @@ h1 {
 
 .about ul {
     margin-right: 40px;
+    margin-left: -20px;
 }
 
 
@@ -168,8 +162,7 @@ h1 {
     font-family: 'Open Sans', sans-serif;
     max-width: 650px;
     margin: 0 auto 0 auto;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding: 60px;
 }
 
 .section-back {
@@ -205,7 +198,8 @@ h1 {
     font-size: 17pt;
     text-transform: uppercase;
     -webkit-text-stroke: 0.20px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    margin-top: 70px;
 }
 
 .section-back.alt1 {
@@ -249,4 +243,62 @@ h1 {
 
 .skill-bar.alt1 > .bar-fill {
     background-color: #37b0ac;
+}
+
+
+#footer {
+    color: #ddd;
+    text-align: center;
+    background-color: #222;
+    font-size: 8pt;
+}
+
+#footer div {
+    padding: 10px;
+}
+
+#footer ul {
+    text-decoration-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#footer li {
+    font-size: 21pt;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #555;
+    border-radius: 5px;
+    margin: 6px;
+}
+
+
+@media (max-width: 900px) {
+    .hide-mobile {
+        display: none !important;
+    }
+    .about {
+        display: block;
+        text-align: center;
+    }
+    .about > span {
+        display: block;
+    }
+    #about-left > div {
+        margin: 0 auto 0 auto;
+    }
+    #about-right {
+        display: block;
+    }
+    #about-right > span {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #about-right ul {
+        padding: 0;
+        margin: 0;
+    }
 }
