--- a/modal.css
+++ b/modal.css
@@ -2,7 +2,6 @@
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
@@ -10,6 +9,11 @@
     overflow: auto;
     background-color: #000;
     background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal > div {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 /* Animation */
@@ -29,7 +33,7 @@
     /*max-width: 700px;*/
 }
 
-#caption {
+.modal .caption {
     margin: auto;
     display: block;
     width: 80%;
@@ -37,7 +41,7 @@
     text-align: center;
     color: #ccc;
     padding: 10px 0;
-    height: 150px;
+    height: 60px;
 }
 
 .modal > .close {
