--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ a:link, a:visited {
 }
 
 #header-back {
-    background: url(http://demo.mutationmedia.net/BOUNCEVCARD/V1/images/profileImages/profileLarge.jpg) no-repeat center center;
-    background-size: cover;
+    /*background: url(http://demo.mutationmedia.net/BOUNCEVCARD/V1/images/profileImages/profileLarge.jpg) no-repeat center center;
+    background-size: cover;*/
+    background-color: #333;
     position: fixed;
     width: 100%;
     height: 500px;
